--- a/fly.toml
+++ b/fly.toml
@@ -1,53 +1,37 @@
-app = "rdap-bootstrap-server"
-kill_signal = "SIGINT"
-kill_timeout = 5
-primary_region = "lhr"
-processes = []
+app 			= "rdap-bootstrap-server"
+kill_signal 	= "SIGINT"
+kill_timeout 	= 5
+primary_region 	= "lhr"
+processes 		= []
 
 [build]
-  dockerfile = "Dockerfile"
+dockerfile 		= "Dockerfile"
 
 [deploy]
-  strategy = "rolling"
-
-[http_service]
-  internal_port = 8080
-  force_https = true
-
-  [http_service.concurrency]
-    type = "requests"
-    hard_limit = 64
-    soft_limit = 128
+strategy 		= "rolling"
 
 [[services]]
-  internal_port = 8080
-  protocol = "tcp"
+protocol 		= "tcp"
+internal_port 	= 8080
 
-  [services.concurrency]
-    type = "requests"
-    hard_limit = 128
-    soft_limit = 64
+[services.concurrency]
+type 			= "requests"
+hard_limit 		= 128
+soft_limit 		= 64
 
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
+[[services.ports]]
+handlers 		= ["http"]
+port 			= 80
 
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
+[[services.ports]]
+handlers 		= ["tls", "http"]
+port 			= 443
 
-  [[services.tcp_checks]]
-    grace_period = "30s"
-    interval = "15s"
-    restart_limit = 4
-    timeout = "2s"
-
-[checks]
-  [checks.http_check]
-    port = 80
-    grace_period = "30s"
-    interval = "15s"
-    restart_limit = 4
-    timeout = "2s"
-	method = "GET"
-	path = "/heartbeat"
+[services.http_checks]
+grace_period 	= "60s"
+interval 		= "30s"
+restart_limit 	= 6
+timeout 		= "5s"
+method 			= "get"
+path 			= "/heartbeat"
+protocol 		= "http"
