add curl as dependency

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
-    }
+    },
+  "require": {
+    "ext-curl": "*"
+  }
 }
