--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: install pcov
-        run:  apt-get -qqq install php-pcov
+        run:  apt-get -qqq install php8.2-pcov
 
       - name: run composer install
         run: composer install --dev
