--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,20 @@ jobs:
       - name: phpstan
         run: ./vendor/bin/phpstan --no-progress --error-format=github --memory-limit=-1 analyze
 
+      - name: start server
+        uses: JarvusInnovations/background-action@v1
+        with:
+          run: |
+            ./rdapd --addr=127.0.0.1 --port=8080 &
+          wait-for: 30s
+          wait-on: |
+            http://127.0.0.1:8080/heartbeat
+          tail: true
+          log-output: stderr,stdout
+          log-output-if: failure
+
       - name: pest
-        run: ./vendor/bin/pest --no-progress --coverage --coverage-text
+        run: ./vendor/bin/pest --parallel --no-progress --coverage --coverage-text
 
       - name: coverage check
         run: vendor/bin/coverage-check clover.xml $COVERAGE_THRESHOLD
