--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "require-dev": {
-        "tomasvotruba/cognitive-complexity": "^0.1.1",
-        "pestphp/pest": "^2.8",
-        "rregeer/phpunit-coverage-check": "^0.3.1"
+        "tomasvotruba/cognitive-complexity": "*",
+        "pestphp/pest": "*",
+        "rregeer/phpunit-coverage-check": "*"
     },
     "config": {
         "allow-plugins": {
