--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,16 @@
+volumes:
+  redis-data:
+
 services:
+  redis:
+    restart: "no"
+    image: redis:latest
+    volumes:
+      - redis-data:/data
+    ports:
+      - 6379:6379
+    command: redis-server --save 60 1 --loglevel warning
+  
   server:
     build: .
     ports:
@@ -6,3 +18,8 @@ services:
     volumes:
       - .:/app
     command: /app/rdapd
+    depends_on:
+      redis:
+        condition: service_started
+    environment:
+      REDIS_HOSTNAME: redis
