--- a/fly.toml
+++ b/fly.toml
@@ -1,37 +1,34 @@
-app             = "rdap-bootstrap-server"
-kill_signal     = "SIGINT"
-kill_timeout    = 5
-primary_region  = "lhr"
-processes       = []
+app = 'rdap-bootstrap-server-http'
+primary_region = 'lhr'
+kill_signal = 'SIGINT'
+kill_timeout = '5s'
 
 [experimental]
-cmd             = ["/app/rdapd", "--port=443", "--tls"]
+cmd = ['/app/rdapd', '--port=8080', '--addr=0.0.0.0']
 
 [build]
-dockerfile      = "Dockerfile"
+dockerfile = 'Dockerfile'
 
 [deploy]
-strategy        = "rolling"
+strategy = 'rolling'
 
-[[services]]
-protocol              = "tcp"
-internal_port         = 443
-auto_stop_machines    = "stop"
-auto_start_machines   = true
-min_machines_running  = 1
+[http_service]
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 1
 
-[services.concurrency]
-type            = "connections"
-soft_limit      = 500
+[http_service.concurrency]
+type = 'requests'
+hard_limit = 250
+soft_limit = 200
 
-[[services.ports]]
-port            = 443
-
-[services.http_checks]
-grace_period    = "30s"
-interval        = "5s"
-timeout         = "5s"
+[[services.http_checks]]
+interval = '5s'
+timeout = '5s'
+grace_period = '30s'
+method = 'get'
+path = '/heartbeat'
+protocol = 'http'
 tls_skip_verify = true
-method          = "get"
-path            = "/heartbeat"
-protocol        = "https"
